--- a/MauiApp1.csproj
+++ b/MauiApp1.csproj
@@ -65,13 +65,31 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="secondPage.xaml.cs">
-	    <DependentUpon>secondPage.xaml</DependentUpon>
+	  <Compile Update="HomePage.xaml.cs">
+	    <DependentUpon>HomePage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="LoginFormPage.xaml.cs">
+	    <DependentUpon>LoginFormPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="LoginPage.xaml.cs">
+	    <DependentUpon>LoginPage.xaml</DependentUpon>
+	  </Compile>
+	  <Compile Update="RegistroFormPage.xaml.cs">
+	    <DependentUpon>RegistroFormPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="secondPage.xaml">
+	  <MauiXaml Update="LoginFormPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="RegistroFormPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="HomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
